Updated intro to Postman. WIP

--- a/java-spring-boot/index.html
+++ b/java-spring-boot/index.html
@@ -626,7 +626,8 @@ public class ReceptasController {
                     <h3 id="section1">Controller metodų ir rezultatų testavimas su Postman programa. Užklausų kūrimas.</h3>
                 </div>
                 <div class="theory-text">
-                    
+                    <li>Parsisiunčiame  <a href="https://www.postman.com/downloads/">Postman programą iš šios nuorodos,</a> kadangi nors ir ją eina naudoti neparsisiuntus, bet norint dirbti su lokaliu (wamp) serveriu reikia papildomų pluginų, tad geriausia iš karto parsisiųsti pilną desktopinę versiją. Prieš arba po parsisiuntimo tikriausiai gali reikėti užsiregistruoti norint pilnai naudotis programa.</li>
+                    <li>Kai jau užsiregistravote, parsisiuntėte ir įsirašėte programą - įsijunkite ją ir prisijunkite prie savo paskyros. <span class="open-image"><img src="../assets/img/img.png" alt="Paveiksliukas rodantis du paveiksliukus, skirtas atidaryti paveiksliuką"><div><img src="../assets/img/java-spring-boot/screenshot19.jpg" alt="Kodo foto"></div></span> Raudona spalva - pažymėta Worskpaces tai čia būtų įprasta kurtis skirtingus projektus. Žalia spalva yra pažymėta Collections, čia dažniausiai galima grupuoti projekto užklausas į grupes arba jei mažesnis projektas tiesiog turėti jo visas užklausa vienam collection. Pvz., pas mane tai yra skirtingų kursų workspace'ai ir skirtingų pamokų/pavyzdžių collectionai. Šiame paveiksliuke yra mūsų dabartinio pavyzdžio collection'as. Jeigu norite prisidėti Collection arba Workspace (arba Užklausą) į savo programą spauskite mėlyna spalva pažymėtą pliusiuką.</li>
                 </div>
             </div>
         </div>
